--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Artem Cheryshev",
   "license": "ISC",
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.8",
     "autoprefixer": "^10.4.11",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
