--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.8",
     "autoprefixer": "^10.4.11",
-    "postcss": "^8.4.16",
+    "cssnano": "^5.1.14",
+    "postcss": "^8.4.20",
+    "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.1.8"
   },
   "dependencies": {
-    "postcss-cli": "^10.0.0"
+    "balloon-css": "^1.2.0"
   }
 }
