--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Artem Cheryshev",
   "license": "ISC",
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "autoprefixer": "^10.4.11",
     "cssnano": "^5.1.14",
